message SearchRequest {
	required string query = 1;
	optional int32 page_number = 2;
	optional int32 result_per_page = 3;
	
	repeated int32 samples = 4 [packed=true];
	
}